grammaire/AstJava/src/save/AstParser.java
// $ANTLR 3.5.3 src/Ast.g 2025-01-09 23:38:20

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;

@SuppressWarnings("all")
public class AstParser extends Parser {
	public static final String[] tokenNames = new String[] {
			"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN", "CALL", "COMMANDS",
			"CONS", "DEFINITION", "ELSE", "EXPRESSION", "EXPRESSIONS", "EXPRS", "FOR",
			"FUNCTION", "HD", "IF", "INPUT", "INPUTSUB", "LEXPR", "LIST", "NIL", "NOP",
			"OUTPUT", "OUTPUTS", "PROGRAM", "SYM", "Symbol", "TL", "TLLIST", "VAR",
			"VARS", "Variable", "WHILE", "WS", "'%'", "'('", "')'", "','", "':'",
			"':='", "';'", "'=?'", "'cons'", "'do'", "'else'", "'fi'", "'for'", "'function'",
			"'hd'", "'if'", "'list'", "'nil'", "'nop'", "'od'", "'read'", "'then'",
			"'tl'", "'while'", "'write'"
	};
	// ajout manuel
	private SymbolTable symbolTable;

	public void setSymbolTable(SymbolTable symbolTable) {
		this.symbolTable = symbolTable;
	}

	public static final int EOF = -1;
	public static final int T__35 = 35;
	public static final int T__36 = 36;
	public static final int T__37 = 37;
	public static final int T__38 = 38;
	public static final int T__39 = 39;
	public static final int T__40 = 40;
	public static final int T__41 = 41;
	public static final int T__42 = 42;
	public static final int T__43 = 43;
	public static final int T__44 = 44;
	public static final int T__45 = 45;
	public static final int T__46 = 46;
	public static final int T__47 = 47;
	public static final int T__48 = 48;
	public static final int T__49 = 49;
	public static final int T__50 = 50;
	public static final int T__51 = 51;
	public static final int T__52 = 52;
	public static final int T__53 = 53;
	public static final int T__54 = 54;
	public static final int T__55 = 55;
	public static final int T__56 = 56;
	public static final int T__57 = 57;
	public static final int T__58 = 58;
	public static final int T__59 = 59;
	public static final int ASSIGN = 4;
	public static final int CALL = 5;
	public static final int COMMANDS = 6;
	public static final int CONS = 7;
	public static final int DEFINITION = 8;
	public static final int ELSE = 9;
	public static final int EXPRESSION = 10;
	public static final int EXPRESSIONS = 11;
	public static final int EXPRS = 12;
	public static final int FOR = 13;
	public static final int FUNCTION = 14;
	public static final int HD = 15;
	public static final int IF = 16;
	public static final int INPUT = 17;
	public static final int INPUTSUB = 18;
	public static final int LEXPR = 19;
	public static final int LIST = 20;
	public static final int NIL = 21;
	public static final int NOP = 22;
	public static final int OUTPUT = 23;
	public static final int OUTPUTS = 24;
	public static final int PROGRAM = 25;
	public static final int SYM = 26;
	public static final int Symbol = 27;
	public static final int TL = 28;
	public static final int TLLIST = 29;
	public static final int VAR = 30;
	public static final int VARS = 31;
	public static final int Variable = 32;
	public static final int WHILE = 33;
	public static final int WS = 34;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators

	public AstParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}

	public AstParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}

	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}

	@Override
	public String[] getTokenNames() {
		return AstParser.tokenNames;
	}

	@Override
	public String getGrammarFileName() {
		return "src/Ast.g";
	}

	public static class program_return extends ParserRuleReturnScope {
		Object tree;

		@Override
		public Object getTree() {
			return tree;
		}
	};

	// $ANTLR start "program"
	// src/Ast.g:37:1: program : ( function )+ EOF -> ^( PROGRAM ( function )+ ) ;
	public final AstParser.program_return program() throws RecognitionException {
		AstParser.program_return retval = new AstParser.program_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token EOF2 = null;
		ParserRuleReturnScope function1 = null;

		Object EOF2_tree = null;
		RewriteRuleTokenStream stream_EOF = new RewriteRuleTokenStream(adaptor, "token EOF");
		RewriteRuleSubtreeStream stream_function = new RewriteRuleSubtreeStream(adaptor, "rule function");

		try {
			// src/Ast.g:37:9: ( ( function )+ EOF -> ^( PROGRAM ( function )+ ) )
			// src/Ast.g:37:11: ( function )+ EOF
			{
				// src/Ast.g:37:11: ( function )+
				int cnt1 = 0;
				loop1: while (true) {
					int alt1 = 2;
					int LA1_0 = input.LA(1);
					if ((LA1_0 == 48)) {
						alt1 = 1;
					}

					switch (alt1) {
						case 1:
						// src/Ast.g:37:11: function
						{
							pushFollow(FOLLOW_function_in_program139);
							function1 = function();
							state._fsp--;

							stream_function.add(function1.getTree());
						}
							break;

						default:
							if (cnt1 >= 1)
								break loop1;
							EarlyExitException eee = new EarlyExitException(1, input);
							throw eee;
					}
					cnt1++;
				}

				EOF2 = (Token) match(input, EOF, FOLLOW_EOF_in_program142);
				stream_EOF.add(EOF2);

				// AST REWRITE
				// elements: function
				// token labels:
				// rule labels: retval
				// token list labels:
				// rule list labels:
				// wildcard labels:
				retval.tree = root_0;
				RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval",
						retval != null ? retval.getTree() : null);

				root_0 = (Object) adaptor.nil();
				// 37:25: -> ^( PROGRAM ( function )+ )
				{
					// src/Ast.g:37:28: ^( PROGRAM ( function )+ )
					{
						Object root_1 = (Object) adaptor.nil();
						root_1 = (Object) adaptor.becomeRoot((Object) adaptor.create(PROGRAM, "PROGRAM"), root_1);
						if (!(stream_function.hasNext())) {
							throw new RewriteEarlyExitException();
						}
						while (stream_function.hasNext()) {
							adaptor.addChild(root_1, stream_function.nextTree());
						}
						stream_function.reset();

						adaptor.addChild(root_0, root_1);
					}

				}

				retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object) adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
			retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
		} finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"

	public static class function_return extends ParserRuleReturnScope {
		Object tree;

		@Override
		public Object getTree() {
			return tree;
		}
	};

	// $ANTLR start "function"
	// src/Ast.g:39:1: function : 'function' Symbol ':' definition -> ^( FUNCTION
	// Symbol definition ) ;
	public final AstParser.function_return function() throws RecognitionException {
		AstParser.function_return retval = new AstParser.function_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal3 = null;
		Token Symbol4 = null;
		Token char_literal5 = null;
		ParserRuleReturnScope definition6 = null;

		Object string_literal3_tree = null;
		Object Symbol4_tree = null;
		Object char_literal5_tree = null;
		RewriteRuleTokenStream stream_48 = new RewriteRuleTokenStream(adaptor, "token 48");
		RewriteRuleTokenStream stream_39 = new RewriteRuleTokenStream(adaptor, "token 39");
		RewriteRuleTokenStream stream_Symbol = new RewriteRuleTokenStream(adaptor, "token Symbol");
		RewriteRuleSubtreeStream stream_definition = new RewriteRuleSubtreeStream(adaptor, "rule definition");

		try {
			// src/Ast.g:39:10: ( 'function' Symbol ':' definition -> ^( FUNCTION Symbol
			// definition ) )
			// src/Ast.g:39:12: 'function' Symbol ':' definition
			{
				string_literal3 = (Token) match(input, 48, FOLLOW_48_in_function159);
				stream_48.add(string_literal3);

				Symbol4 = (Token) match(input, Symbol, FOLLOW_Symbol_in_function161);
				stream_Symbol.add(Symbol4);

				char_literal5 = (Token) match(input, 39, FOLLOW_39_in_function163);
				stream_39.add(char_literal5);

				pushFollow(FOLLOW_definition_in_function165);
				definition6 = definition();
				state._fsp--;

				stream_definition.add(definition6.getTree());

				// AST REWRITE
				// elements: definition, Symbol
				// token labels:
				// rule labels: retval
				// token list labels:
				// rule list labels:
				// wildcard labels:
				retval.tree = root_0;
				RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval",
						retval != null ? retval.getTree() : null);

				root_0 = (Object) adaptor.nil();
				// 39:45: -> ^( FUNCTION Symbol definition )
				{
					// src/Ast.g:39:48: ^( FUNCTION Symbol definition )
					{
						Object root_1 = (Object) adaptor.nil();
						root_1 = (Object) adaptor.becomeRoot((Object) adaptor.create(FUNCTION, "FUNCTION"), root_1);
						adaptor.addChild(root_1, stream_Symbol.nextNode());
						adaptor.addChild(root_1, stream_definition.nextTree());
						adaptor.addChild(root_0, root_1);
					}

				}

				retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object) adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
			retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
		} finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "function"

	public static class definition_return extends ParserRuleReturnScope {
		Object tree;

		@Override
		public Object getTree() {
			return tree;
		}
	};

	// $ANTLR start "definition"
	// src/Ast.g:41:1: definition : 'read' input '%' commands '%' 'write' output ->
	// ^( DEFINITION input commands output ) ;
	public final AstParser.definition_return definition() throws RecognitionException {
		AstParser.definition_return retval = new AstParser.definition_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal7 = null;
		Token char_literal9 = null;
		Token char_literal11 = null;
		Token string_literal12 = null;
		ParserRuleReturnScope input8 = null;
		ParserRuleReturnScope commands10 = null;
		ParserRuleReturnScope output13 = null;

		Object string_literal7_tree = null;
		Object char_literal9_tree = null;
		Object char_literal11_tree = null;
		Object string_literal12_tree = null;
		RewriteRuleTokenStream stream_55 = new RewriteRuleTokenStream(adaptor, "token 55");
		RewriteRuleTokenStream stream_35 = new RewriteRuleTokenStream(adaptor, "token 35");
		RewriteRuleTokenStream stream_59 = new RewriteRuleTokenStream(adaptor, "token 59");
		RewriteRuleSubtreeStream stream_output = new RewriteRuleSubtreeStream(adaptor, "rule output");
		RewriteRuleSubtreeStream stream_input = new RewriteRuleSubtreeStream(adaptor, "rule input");
		RewriteRuleSubtreeStream stream_commands = new RewriteRuleSubtreeStream(adaptor, "rule commands");

		try {
			// src/Ast.g:41:12: ( 'read' input '%' commands '%' 'write' output -> ^(
			// DEFINITION input commands output ) )
			// src/Ast.g:41:14: 'read' input '%' commands '%' 'write' output
			{
				string_literal7 = (Token) match(input, 55, FOLLOW_55_in_definition183);
				stream_55.add(string_literal7);

				pushFollow(FOLLOW_input_in_definition185);
				input8 = input();
				state._fsp--;

				stream_input.add(input8.getTree());
				char_literal9 = (Token) match(input, 35, FOLLOW_35_in_definition187);
				stream_35.add(char_literal9);

				pushFollow(FOLLOW_commands_in_definition189);
				commands10 = commands();
				state._fsp--;

				stream_commands.add(commands10.getTree());
				char_literal11 = (Token) match(input, 35, FOLLOW_35_in_definition191);
				stream_35.add(char_literal11);

				string_literal12 = (Token) match(input, 59, FOLLOW_59_in_definition193);
				stream_59.add(string_literal12);

				pushFollow(FOLLOW_output_in_definition195);
				output13 = output();
				state._fsp--;

				stream_output.add(output13.getTree());

				// AST REWRITE
				// elements: input, commands, output
				// token labels:
				// rule labels: retval
				// token list labels:
				// rule list labels:
				// wildcard labels:
				retval.tree = root_0;
				RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval",
						retval != null ? retval.getTree() : null);

				root_0 = (Object) adaptor.nil();
				// 42:12: -> ^( DEFINITION input commands output )
				{
					// src/Ast.g:42:15: ^( DEFINITION input commands output )
					{
						Object root_1 = (Object) adaptor.nil();
						root_1 = (Object) adaptor.becomeRoot((Object) adaptor.create(DEFINITION, "DEFINITION"), root_1);
						adaptor.addChild(root_1, stream_input.nextTree());
						adaptor.addChild(root_1, stream_commands.nextTree());
						adaptor.addChild(root_1, stream_output.nextTree());
						adaptor.addChild(root_0, root_1);
					}

				}

				retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object) adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
			retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
		} finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "definition"

	public static class input_return extends ParserRuleReturnScope {
		Object tree;

		@Override
		public Object getTree() {
			return tree;
		}
	};

	// $ANTLR start "input"
	// src/Ast.g:45:1: input : inputSub -> ^( INPUT inputSub ) ;
	public final AstParser.input_return input() throws RecognitionException {
		AstParser.input_return retval = new AstParser.input_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope inputSub14 = null;

		RewriteRuleSubtreeStream stream_inputSub = new RewriteRuleSubtreeStream(adaptor, "rule inputSub");

		try {
			// src/Ast.g:45:8: ( inputSub -> ^( INPUT inputSub ) )
			// src/Ast.g:45:10: inputSub
			{
				pushFollow(FOLLOW_inputSub_in_input229);
				inputSub14 = inputSub();
				state._fsp--;

				stream_inputSub.add(inputSub14.getTree());

				// AST REWRITE
				// elements: inputSub
				// token labels:
				// rule labels: retval
				// token list labels:
				// rule list labels:
				// wildcard labels:
				retval.tree = root_0;
				RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval",
						retval != null ? retval.getTree() : null);

				root_0 = (Object) adaptor.nil();
				// 45:19: -> ^( INPUT inputSub )
				{
					// src/Ast.g:45:22: ^( INPUT inputSub )
					{
						Object root_1 = (Object) adaptor.nil();
						root_1 = (Object) adaptor.becomeRoot((Object) adaptor.create(INPUT, "INPUT"), root_1);
						adaptor.addChild(root_1, stream_inputSub.nextTree());
						adaptor.addChild(root_0, root_1);
					}

				}

				retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object) adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
			retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
		} finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "input"

	public static class inputSub_return extends ParserRuleReturnScope {
		Object tree;

		@Override
		public Object getTree() {
			return tree;
		}
	};

	// $ANTLR start "inputSub"
	// src/Ast.g:46:1: inputSub : Variable ( ',' Variable )* -> ^( INPUTSUB (
	// Variable )* ) ;
	public final AstParser.inputSub_return inputSub() throws RecognitionException {
		AstParser.inputSub_return retval = new AstParser.inputSub_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Variable15 = null;
		Token char_literal16 = null;
		Token Variable17 = null;

		Object Variable15_tree = null;
		Object char_literal16_tree = null;
		Object Variable17_tree = null;
		RewriteRuleTokenStream stream_Variable = new RewriteRuleTokenStream(adaptor, "token Variable");
		RewriteRuleTokenStream stream_38 = new RewriteRuleTokenStream(adaptor, "token 38");

		try {
			// src/Ast.g:46:10: ( Variable ( ',' Variable )* -> ^( INPUTSUB ( Variable )* )
			// )
			// src/Ast.g:46:12: Variable ( ',' Variable )*
			{
				Variable15 = (Token) match(input, Variable, FOLLOW_Variable_in_inputSub244);
				stream_Variable.add(Variable15);

				// src/Ast.g:46:21: ( ',' Variable )*
				loop2: while (true) {
					int alt2 = 2;
					int LA2_0 = input.LA(1);
					if ((LA2_0 == 38)) {
						alt2 = 1;
					}

					switch (alt2) {
						case 1:
						// src/Ast.g:46:22: ',' Variable
						{
							char_literal16 = (Token) match(input, 38, FOLLOW_38_in_inputSub247);
							stream_38.add(char_literal16);

							Variable17 = (Token) match(input, Variable, FOLLOW_Variable_in_inputSub249);
							stream_Variable.add(Variable17);

						}
							break;

						default:
							break loop2;
					}
				}

				// AST REWRITE
				// elements: Variable
				// token labels:
				// rule labels: retval
				// token list labels:
				// rule list labels:
				// wildcard labels:
				retval.tree = root_0;
				RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval",
						retval != null ? retval.getTree() : null);

				root_0 = (Object) adaptor.nil();
				// 46:37: -> ^( INPUTSUB ( Variable )* )
				{
					// src/Ast.g:46:40: ^( INPUTSUB ( Variable )* )
					{
						Object root_1 = (Object) adaptor.nil();
						root_1 = (Object) adaptor.becomeRoot((Object) adaptor.create(INPUTSUB, "INPUTSUB"), root_1);
						// src/Ast.g:46:51: ( Variable )*
						while (stream_Variable.hasNext()) {
							adaptor.addChild(root_1, stream_Variable.nextNode());
						}
						stream_Variable.reset();

						adaptor.addChild(root_0, root_1);
					}

				}

				retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object) adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
			retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
		} finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "inputSub"

	public static class output_return extends ParserRuleReturnScope {
		Object tree;

		@Override
		public Object getTree() {
			return tree;
		}
	};

	// $ANTLR start "output"
	// src/Ast.g:49:1: output : Variable ( ',' Variable )* -> ^( OUTPUT ( Variable
	// )* ) ;
	public final AstParser.output_return output() throws RecognitionException {
		AstParser.output_return retval = new AstParser.output_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token Variable18 = null;
		Token char_literal19 = null;
		Token Variable20 = null;

		Object Variable18_tree = null;
		Object char_literal19_tree = null;
		Object Variable20_tree = null;
		RewriteRuleTokenStream stream_Variable = new RewriteRuleTokenStream(adaptor, "token Variable");
		RewriteRuleTokenStream stream_38 = new RewriteRuleTokenStream(adaptor, "token 38");

		try {
			// src/Ast.g:49:8: ( Variable ( ',' Variable )* -> ^( OUTPUT ( Variable )* ) )
			// src/Ast.g:49:10: Variable ( ',' Variable )*
			{
				Variable18 = (Token) match(input, Variable, FOLLOW_Variable_in_output269);
				stream_Variable.add(Variable18);

				// src/Ast.g:49:19: ( ',' Variable )*
				loop3: while (true) {
					int alt3 = 2;
					int LA3_0 = input.LA(1);
					if ((LA3_0 == 38)) {
						alt3 = 1;
					}

					switch (alt3) {
						case 1:
						// src/Ast.g:49:20: ',' Variable
						{
							char_literal19 = (Token) match(input, 38, FOLLOW_38_in_output272);
							stream_38.add(char_literal19);

							Variable20 = (Token) match(input, Variable, FOLLOW_Variable_in_output274);
							stream_Variable.add(Variable20);

						}
							break;

						default:
							break loop3;
					}
				}

				// AST REWRITE
				// elements: Variable
				// token labels:
				// rule labels: retval
				// token list labels:
				// rule list labels:
				// wildcard labels:
				retval.tree = root_0;
				RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval",
						retval != null ? retval.getTree() : null);

				root_0 = (Object) adaptor.nil();
				// 49:35: -> ^( OUTPUT ( Variable )* )
				{
					// src/Ast.g:49:38: ^( OUTPUT ( Variable )* )
					{
						Object root_1 = (Object) adaptor.nil();
						root_1 = (Object) adaptor.becomeRoot((Object) adaptor.create(OUTPUT, "OUTPUT"), root_1);
						// src/Ast.g:49:47: ( Variable )*
						while (stream_Variable.hasNext()) {
							adaptor.addChild(root_1, stream_Variable.nextNode());
						}
						stream_Variable.reset();

						adaptor.addChild(root_0, root_1);
					}

				}

				retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object) adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
			retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
		} finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "output"

	public static class commands_return extends ParserRuleReturnScope {
		Object tree;

		@Override
		public Object getTree() {
			return tree;
		}
	};

	// $ANTLR start "commands"
	// src/Ast.g:52:1: commands : command ( ';' commands )? -> ^( COMMANDS ( command
	// )+ ) ;
	public final AstParser.commands_return commands() throws RecognitionException {
		AstParser.commands_return retval = new AstParser.commands_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal22 = null;
		ParserRuleReturnScope command21 = null;
		ParserRuleReturnScope commands23 = null;

		Object char_literal22_tree = null;
		RewriteRuleTokenStream stream_41 = new RewriteRuleTokenStream(adaptor, "token 41");
		RewriteRuleSubtreeStream stream_command = new RewriteRuleSubtreeStream(adaptor, "rule command");
		RewriteRuleSubtreeStream stream_commands = new RewriteRuleSubtreeStream(adaptor, "rule commands");

		try {
			// src/Ast.g:52:10: ( command ( ';' commands )? -> ^( COMMANDS ( command )+ ) )
			// src/Ast.g:52:12: command ( ';' commands )?
			{
				pushFollow(FOLLOW_command_in_commands294);
				command21 = command();
				state._fsp--;

				stream_command.add(command21.getTree());
				// src/Ast.g:52:20: ( ';' commands )?
				int alt4 = 2;
				int LA4_0 = input.LA(1);
				if ((LA4_0 == 41)) {
					alt4 = 1;
				}
				switch (alt4) {
					case 1:
					// src/Ast.g:52:21: ';' commands
					{
						char_literal22 = (Token) match(input, 41, FOLLOW_41_in_commands297);
						stream_41.add(char_literal22);

						pushFollow(FOLLOW_commands_in_commands299);
						commands23 = commands();
						state._fsp--;

						stream_commands.add(commands23.getTree());
					}
						break;

				}

				// AST REWRITE
				// elements: command
				// token labels:
				// rule labels: retval
				// token list labels:
				// rule list labels:
				// wildcard labels:
				retval.tree = root_0;
				RewriteRuleSubtreeStream stream_retval = new RewriteRuleSubtreeStream(adaptor, "rule retval",
						retval != null ? retval.getTree() : null);

				root_0 = (Object) adaptor.nil();
				// 52:36: -> ^( COMMANDS ( command )+ )
				{
					// src/Ast.g:52:39: ^( COMMANDS ( command )+ )
					{
						Object root_1 = (Object) adaptor.nil();
						root_1 = (Object) adaptor.becomeRoot((Object) adaptor.create(COMMANDS, "COMMANDS"), root_1);
						if (!(stream_command.hasNext())) {
							throw new RewriteEarlyExitException();
						}
						while (stream_command.hasNext()) {
							adaptor.addChild(root_1, stream_command.nextTree());
						}
						stream_command.reset();

						adaptor.addChild(root_0, root_1);
					}

				}

				retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (Object) adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		} catch (RecognitionException re) {
			reportError(re);
			recover(input, re);
			retval.tree = (Object) adaptor.errorNode(input, retval.start, input.LT(-1), re);
		} finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "commands"

	public static class command_return extends ParserRuleReturnScope {
		Object tree;

		@Override
		public Object getTree() {
			return tree;
		}
	};

	// $ANTLR start "command"
	// src/Ast.g:54:1: command : ( 'if' expression 'then' commands ( 'else' commands
	// )? 'fi' -> ^( IF expression commands ( ^( ELSE commands ) )? ) | 'while'
	// expression 'do' commands 'od' -> ^( WHILE expression commands ) | 'for'
	// expression 'do' commands 'od' -> ^( FOR expression commands ) | 'nop' -> ^(
	// NOP ) | vars ':=' expression -> ^( ASSIGN vars expression ) );
	public final AstParser.command_return command() throws RecognitionException {
		AstParser.command_return retval = new AstParser.command_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token string_literal24 = null;
		Token string_literal26 = null;
		Token string_literal28 = null;
		Token string_literal30 = null;
		Token string_literal31 = null;
		Token string_literal33 = null;
		Token string_literal35 = null;
		Token string_literal36 = null;
		Token string_literal38 = null;
		Token string_literal40 = null;
		Token string_literal41 = null;
		Token string_literal43 = null;
		ParserRuleReturnScope expression25 = null;
		ParserRuleReturnScope commands27 = null;
		ParserRuleReturnScope commands29 = null;
		ParserRuleReturnScope expression32 = null;
		ParserRuleReturnScope commands34 = null;
		ParserRuleReturnScope expression37 = null;
		ParserRuleReturnScope commands39 = null;
		ParserRuleReturnScope vars42 = null;
		ParserRuleReturnScope expression44 = null;

		Object string_literal24_tree = null;
		Object string_literal26_tree = null;
		Object string_literal28_tree = null;
		Object string_literal30_tree = null;
		Object string_literal31_tree = null;
		Object string_literal33_tree = null;
		Object string_literal35_tree = null;
		Object string_literal36_tree = null;
		Object string_literal38_tree = null;
		Object string_literal40_tree = null;
		Object string_literal41_tree = null;
		Object string_literal43_tree = null;
		RewriteRuleTokenStream stream_44 = new RewriteRuleTokenStream(adaptor, "token 44");
		RewriteRuleTokenStream stream_56 = new RewriteRuleTokenStream(adaptor, "token 56");
		RewriteRuleTokenStream stream_45 = new RewriteRuleTokenStream(adaptor, "token 45");
		RewriteRuleTokenStream stream_46 = new RewriteRuleTokenStream(adaptor, "token 46");
		RewriteRuleTokenStream stream_58 = new RewriteRuleTokenStream(adaptor, "token 58");
		RewriteRuleTokenStream stream_47 = new RewriteRuleTokenStream(adaptor, "token 47");
		RewriteRuleTokenStream stream_50 = new RewriteRuleTokenStream(adaptor, "token 50");
		RewriteRuleTokenStream stream_40 = new RewriteRuleTokenStream(adaptor, "token 40");
		RewriteRuleTokenStream stream_53 = new RewriteRuleTokenStream(adaptor, "token 53");
		RewriteRuleTokenStream stream_54 = new RewriteRuleTokenStream(adaptor, "token 54");
		RewriteRuleSubtreeStream stream_expression = new RewriteRuleSubtreeStream(adaptor, "rule expression");
		RewriteRuleSubtreeStream stream_vars = new RewriteRuleSubtreeStream(adaptor, "rule vars");
		RewriteRuleSubtreeStream stream_commands = new RewriteRuleSubtreeStream(adaptor, "rule commands");

		try {
			// src/Ast.g:55:5: ( 'if' expression 'then' commands ( 'else' commands )? 'fi'
			// -> ^( IF expression commands ( ^( ELSE commands ) )? ) | 'while' expression
			// 'do' commands 'od' -> ^( WHILE expression commands ) | 'for' expression 'do'
			// commands 'od' -> ^( FOR expression commands ) | 'nop' -> ^( NOP ) | vars ':='
			// expression -> ^( ASSIGN vars expression ) )
			int alt6 = 5;
			switch (input.LA(1)) {
				case 50: {
					alt6 = 1;
				}
					break;
				case 58: {
					alt6 = 2;
				}
					break;
				case 47: {
					alt6 = 3;
				}
					break;
				case 53: {
					alt6 = 4;
				}
					break;
				case Variable: {
					alt6 = 5;
				}
					break;
				default:
					NoViableAltException nvae = new NoViableAltException("", 6, 0, input);
					throw nvae;
			}
			switch (alt6) {
				case 1:
				// src/Ast.g:55:7: 'if' expression 'then' commands ( 'else' commands )? 'fi'
				{
					string_literal24 = (Token) match(input, 50, FOLLOW_50_in_command322);
					stream_50.add(string_literal24);

					pushFollow(FOLLOW_expression_in_command324);
					expression25 = expression();
					state._fsp--;

					stream_expression.add(expression25.getTree());
					string_literal26 = (Token) match(input, 56, FOLLOW_56_in_command326);
					stream_56.add(string_literal26);

					pushFollow(FOLLOW_commands_in_command328);
					commands27 = commands();
					state._fsp--;
